infrastructure/forgejo/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-svc
spec:
  selector:
    app: forgejo
  ports:
    - port: 80
      targetPort: 3000
      name: webui
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-svc-ssh
spec:
  selector:
    app: forgejo
  type: LoadBalancer
  ports:
    - port: 2222
      targetPort: 222
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
spec:
  selector:
    matchLabels:
      app: forgejo
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:16
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          volumeMounts:
            - name: forgejo-pv
              mountPath: /data
              subPath: forgejo/data
            - name: forgejo-pv
              mountPath: /var/lib/gitea
              subPath: forgejo/repositories
          ports:
            - containerPort: 3000
            - containerPort: 222
      volumes:
        - name: forgejo-pv
          persistentVolumeClaim:
            claimName: smb-share
