infrastructure/forgejo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`forgejo.k8s.tstuessi.com`)
      services:
        - name: forgejo-svc
          port: webui
